[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visaverse-guardian-ai"
version = "0.1.0"
description = "AI-driven global mobility intelligence platform"
authors = [{name = "VisaVerse Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "hypothesis>=6.92.1",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "google-cloud-storage>=2.10.0",
    "google-cloud-run>=0.10.5",
    "google-auth>=2.25.2",
    "paddlepaddle>=2.5.2",
    "paddleocr>=2.7.0.3",
    "neo4j>=5.15.0",
    "google-generativeai>=0.3.2",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aiofiles>=23.2.1"
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88